--- a/views/item_details.pug
+++ b/views/item_details.pug
@@ -2,23 +2,26 @@ extends layout
 
 block content
   div.container
-    div.item.item-container
-      div.item-details
-        if item.imgName
-          div.item-img
-            img(src=`/uploads/images/${item.imgName}`)
-        else
+    div.item-container
+      if item.imgName
+        div.item-img
+          img(src=`/uploads/images/${item.imgName}`)
+      else
+        div.item-img
           div.item-no-img
+      div.item-details
         div.item-data
           h1 #{item.name}
           p #{item.description}
         div.item-status
-          h2 #{item.check_price}
-          h3 #{item.check_stock}
+          div.item-price
+            h2 Price:
+            h2 #{item.check_price}
+          div.item-stock
+            h3 Stock:
+            h3 #{item.check_stock}
         div.item-controls
-          a(href=`${item._id}/update`)
-            div.catalog-update
-              h1 Update item
-          a(href=`${item._id}/delete`)
-            div.catalog-delete
-              h1 Delete item
+          a(href=`.${item.url}/update`)
+            div.btn Update item
+          a(href=`.${item.url}/delete`)
+            div.btn Delete item
