--- a/views/item_form.pug
+++ b/views/item_form.pug
@@ -6,12 +6,12 @@ block content
       h1= title
       form(method='POST' action='' enctype='multipart/form-data')
         label(for='name') Name:
-          input#name(type='text' name='name' minlength=3 maxlength=30 value=(item===undefined ? '' : item.name) placeholder='Item name' required='true')
+        input#name(type='text' name='name' minlength=3 maxlength=30 value=(item===undefined ? '' : item.name) placeholder='Item name' required='true')
         label(for='description') Description:
-          textarea#description(type='text' name='description' rows=7 maxlength=100 placeholder='Item description') #{item===undefined ? '' : item.description}
+        textarea#description(type='text' name='description' rows=7 maxlength=200 placeholder='Item description') #{item===undefined ? '' : item.description}
         label(for='category') Category:
         select#category(name='category' required='true')
-          option(value='') --- Choose category ---
+          option(value='') ----- Choose category -----
           - category_list.sort((x, y) => {let catX = x.name.toUpperCase(); let catY = y.name.toUpperCase(); return (catX < catY) ? -1 : (catX > catY) ? 1 : 0;});
           each category in category_list
             if item
@@ -22,21 +22,21 @@ block content
             else
               option(value=category._id) #{category.name}
         label(for='price') Price:
-          input#price(type='number' step=0.01 name='price' min=0 max=9999999.99 value=(item===undefined ? '' : item.price) placeholder='Item price in dollars' required='true')
+        input#price(type='number' step=0.01 name='price' min=0 max=9999999.99 value=(item===undefined ? '' : item.price) placeholder='Item price in dollars' required='true')
         label(for='stock') Stock:
-          input#stock(type='number' name='stock' min=0 max=9999 value=(item===undefined ? '' : item.stock) placeholder='Item stock' required='true')
+        input#stock(type='number' name='stock' min=0 max=9999 value=(item===undefined ? '' : item.stock) placeholder='Item stock' required='true')
         if item
           if item.imgName
             div.item-img
               input#itemimagename(type='hidden' name='itemimagename' required='true' value=item.imgName)
               img(src=`/uploads/images/${item.imgName}`)
         label(for='picture') Picture:
-          input#picture(type='file' name='picture')
+        input#picture(type='file' name='picture')
         if item
           if item.permanent
             input#itemispermanent(type='hidden' name='itemispermanent' value='true')
             label(for='adminpass') This is an original shop item. You need admin password to delete it:
-              input#adminpass(type='password' name='adminpass' minlength=1 placeholder='Admin password' required='true')
+            input#adminpass(type='password' name='adminpass' minlength=1 placeholder='Admin password' required='true')
             if pass_check === false
               ol.errors-msg
                 li!= 'Wrong admin password!'
