--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -192,21 +192,27 @@ main {
 .item {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
 	width: 400px;
 	height: 400px;
 	color: var(--custom-black);
 	background-color: var(--custom-blue);
 	border-radius: 12px;
 	padding: 12px;
-	justify-content: space-between;
 	word-break: break-all;
+}
+
+.item-details {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .item .item-img {
 	height: 128px;
 	width: 128px;
 	margin: 0 auto;
+	margin-bottom: 12px;
 }
 
 .item .item-img img {
@@ -221,6 +227,7 @@ main {
 	height: 128px;
 	width: 128px;
 	margin: 0 auto;
+	margin-bottom: 12px;
 }
 
 .item .item-no-img::before {
@@ -258,6 +265,14 @@ main {
 .item-price *,
 .item-stock * {
 	margin-top: 8px;
+}
+
+.item-price {
+	text-align: left;
+}
+
+.item-stock {
+	text-align: right;
 }
 
 .item.category-controls {
@@ -373,6 +388,10 @@ main {
 	margin-bottom: 24px;
 }
 
+.item-container .item-status {
+	margin: 12px 0;
+}
+
 .item-container .item-status > * {
 	padding: 12px;
 }
@@ -420,26 +439,30 @@ main {
 	background-color: var(--custom-blue);
 	border-radius: 12px;
 	width: 500px;
-	padding: 8px 16px;
+	padding: 12px 40px;
 	text-align: center;
 }
 
 form {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	font-size: 1.5rem;
 	width: 100%;
-}
-
-label {
-	display: flex;
-	flex-direction: column;
 }
 
 form > *:not(label) {
 	margin-top: 4px;
 	margin-bottom: 12px;
+}
+
+form button {
+	font-size: 1.5rem !important;
+	margin: 12px auto !important;
+}
+
+label {
+	display: flex;
+	flex-direction: column;
 }
 
 input,
@@ -449,6 +472,7 @@ textarea {
 }
 
 select {
+	padding: 4px;
 	text-align: center;
 }
 
@@ -458,11 +482,6 @@ select {
 	margin: 8px;
 	font-size: 1rem;
 	color: var(--custom-red);
-}
-
-.category-form .btn,
-.item-form .btn {
-	margin: 12px;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -547,17 +566,23 @@ select {
 	margin: 12px;
 }
 
-.delete-controls .btn {
+.delete-controls button {
 	cursor: pointer;
 }
 
-.btn {
+.btn-submit,
+.btn-control {
 	font-weight: 600;
 	font-size: 1.5rem;
 	border: none;
 	background-color: var(--custom-orange);
 	border-radius: 4px;
-	padding: 8px 16px;
+	padding: 12px 20px;
+}
+
+.btn-control {
+	font-size: 1rem;
+	padding: 8px 12px;
 }
 
 .btn:hover {
